# datapath

./: .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
datapath/: __init__.py
tests/: test_datapath.py
