[project]
readne = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/idsvandermolen/datapath"
"Bug Tracker" = "https://github.com/idsvandermolen/datapath/issues"

[tool.poetry]
name = "datapath"
version = "0.1.0"
description = "Path based access to items in a data structure"
authors = ["Ids van der Molen <2285220+idsvandermolen@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.9"
build = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
