[project]
name = "datapath"
version = "0.5.0"
description = "Path based access to items in a data structure"
authors = [
    {name = "Ids van der Molen", email = "2285220+idsvandermolen@users.noreply.github.com"}
]
license.file = "LICENSE"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/idsvandermolen/datapath"
"Bug Tracker" = "https://github.com/idsvandermolen/datapath/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]
